assets/css/custom.css
.custom-control-input:checked~.custom-control-label::before{
  background-color:#0bceaf;
  border-color:#0bceaf;
}


.custom-control-input:focus:not(:checked)~.custom-control-label::before{
  border-color:#0bceaf;
  box-shadow:0 0 0 0.2rem rgba(53,247,216,.3)
}


.nav-strict .navbar-brand {
  margin-top: 0px;
}


.navbar-brand {
  padding-left: 10px;
  margin-top: 30px;
  z-index: 900;
  -webkit-transition: all 0.4s ease-out;
  -moz-transition: all 0.4s ease-out;
  -o-transition: all 0.4s ease-out;
  -ms-transition: all 0.4s ease-out;
  transition: all 0.4s ease-out;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
}


@media only screen and (max-width: 991px) {
  .white-vertion .mh-xs-mobile-nav .bgColor {
    background-color: white;
  }

  .dark-vertion .mh-xs-mobile-nav .bgColor {
    background-color: #202026;
  }

  .navbar-collapse {
    height: 100vh;
  }
}


@media only screen and (max-width: 991px) {
  .home-padding {
    padding-top: 150px;
  }
}


@media only screen and (max-width: 575px) {
  .home-padding {
    padding-top: 100px;
  }
}



.gallery-mobile-style>.slides>.slide>.slide-content {
  margin: 0
}

.gallery-mobile-style {
  padding-bottom:220%;
  margin:0;
}

.gallery-desktop-style {
  padding-bottom: 56.25%;
  /* width: 65vw; */
}

.marvel-device.iphone-x {
  background-color: black;
}

.marvel-device.iphone-x .volume, .marvel-device.iphone-x .volume:before, .marvel-device.iphone-x .volume:after, .marvel-device.iphone-x .sleep {
  background-color: black;
}

.mh-portfolio-modal-inner {
  max-height: 800px;
  overflow-y: unset;
}

.mh-service-item {
  text-align: center;
}

.mh-portfolio-date {
  margin-top:-15px;
}

.demoLinks {
  padding: 0 10px 0 10px;
  font-size: 18px;
}

.underlined-href {
  text-decoration: underline!important;
}

.my-screen-nav-button {
  position: absolute;
  top: 50%;
  width: 40px;
  height: 40px;
  margin-top: -23px;
  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 60px;
  font-weight: 100;
  line-height: 30px;
  color: #fff;
  text-decoration: none;
  text-shadow: 0 0 2px #000;
  text-align: center;
  background: #222;
  background: rgba(0,0,0,.5);
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  border: 3px solid #fff;
  -webkit-border-radius: 23px;
  -moz-border-radius: 23px;
  border-radius: 23px;
  opacity: .5;
  cursor: pointer;
}

.left-button {
  left: 20px;
  right: auto;
}

.right-button {
  left: auto;
  right: 20px;
}

